--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
