--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gallery-app",
   "version": "0.1.0",
-  "homepage": "https://alexbirwp.github.io/gallery-app",
+  "homepage": "https://alexbirwp.github.io/gallery-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
